don't run if imageName is empty